api create method
